@@ -2,6 +2,7 @@
 #define __G_VFS_URI_UTILS_H__
 
 #include <glib.h>
+#include <gio/gurifuncs.h>
 
 G_BEGIN_DECLS
 
@@ -15,22 +16,11 @@ typedef struct {
   char *fragment;
 } GDecodedUri;
 
-char *       g_uri_get_scheme            (const char *uri);
-
-char *       g_uri_unescape_string       (const gchar *escaped_string,
-					  const gchar *escaped_string_end,
-					  const gchar *illegal_characters);
-void         g_string_append_uri_encoded (GString     *string,
-					  const char  *encoded,
-					  const char  *reserved_chars_allowed,
-					  gboolean     allow_utf8);
-
 char *       g_encode_uri                (GDecodedUri *decoded,
 					  gboolean     allow_utf8);
 void         g_decoded_uri_free          (GDecodedUri *decoded);
 GDecodedUri *g_decode_uri                (const char  *uri);
 GDecodedUri *g_decoded_uri_new           (void);
-
 
 
 G_END_DECLS
